actuator 모든 end point 활성화 시키기 ~